Adicionando Aulas Java

--- a/Aula09/nbproject/project.properties
+++ b/Aula09/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Aula09
-main.class=javaapplication17.JavaApplication17
+main.class=SwingMatematica.MatematicaDesign
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
