Ajustando Projeto Cadastro com Java

--- a/Aula12/nbproject/project.properties
+++ b/Aula12/nbproject/project.properties
@@ -63,6 +63,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.mysql-connector-j-9.3.0.jar=C:\\Users\\ead\\Documents\\mysql-connector-j-9.3.0.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
